# statesrv

./: CMakeLists.txt  README.md  go.mod
statelang/: CMakeLists.txt
statelang/lexer/: lexer.go  token.go
statelang/src/: exception.hpp  lexer.cpp  lexer.hpp  statelang.cpp  token.hpp
